--- a/ui/package.json
+++ b/ui/package.json
@@ -2,12 +2,12 @@
   "name": "workout-plan",
   "version": "0.0.0",
   "scripts": {
-    "ng": "workout-plan/node_modules/.bin/ng",
-    "start": "workout-plan/node_modules/.bin/ng serve",
-    "build": "workout-plan/node_modules/.bin/ng build",
-    "test": "workout-plan/node_modules/.bin/ng test",
-    "lint": "workout-plan/node_modules/.bin/ng lint",
-    "e2e": "workout-plan/node_modules/.bin/ng ../e2e"
+    "ng": "ng",
+    "start": "ng serve --proxy-config proxy.conf.json",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "bootstrap": "^4.4.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
